# InternshipSteinertree

./: BoundEdgeHeaps.cpp  BoundEdgeHeaps.h  CMakeLists.txt  EdgeSequence.cpp  EdgeSequence.h  Edge_Heaps.cpp  Edge_Heaps.h  Ext_Union_Find_Structure.cpp  Ext_Union_Find_Structure.h  Horizontal_Edges_Lists.cpp  Horizontal_Edges_Lists.h  ImprovingChangement.cpp  ImprovingChangement.h  Insertion_Tree_Data_Structure.cpp  Insertion_Tree_Data_Structure.h  NCA_Tree_Data_Structure.cpp  NCA_Tree_Data_Structure.h  README.md  Subgraph.cpp  Subgraph.h  Supergraph.cpp  Supergraph.h  Tree_Data_Structure.cpp  Tree_Data_Structure.h  Union_Find_Structure.cpp  Union_Find_Structure.h  general_aux_functions.cpp  general_aux_functions.h  gitignore  graph.cpp  graph.h  graph_algorithms.cpp  graph_algorithms.h  graph_aux_functions.cpp  graph_aux_functions.h  graph_printfunctions.cpp  graph_printfunctions.h  key_path_exchange.cpp  key_path_exchange.h  key_vertex_elimination.cpp  (+22 more)
Altes/: Insertion_Tree_Data_Structure.cpp  Insertion_Tree_Data_Structure.h  alt-key-path-exch.cpp  alt-mehlhorn.cpp  alt-restore-vd.cpp  alt-vor-diag-aux.cpp  vor-diag.cpp
Pfade_von_TestInstanzen/: 1R  ALUE und ALUT  B  ES1000FST und ES10000FST  I080  I640  LIN  Mix1  Vienna
Test-Instanzen/: graph-mst1.txt  graph-solution.txt  graph-tree.txt  graph-vd1.txt  graph-vd4.txt  rect_instance_1.txt  test-graph1.txt
Test-Instanzen/KeyPathExchange-Tests/: kpe-or_graph1.txt  kpe-or_graph2.txt  kpe-or_graph3.txt  kpe-sol_graph1.txt  kpe-sol_graph2.txt  kpe-sol_graph3.txt
Test-Instanzen/KeyVertexElimination-Tests/: kve-graph1_or.txt  kve-graph1_sol.txt  kve-graph2_or.txt  kve-graph2_sol.txt  kve-graph3_or.txt  kve-graph3_sol.txt
Test-Instanzen/Mix1/: G101a.stp  _Mix1_Pfade  rect_instance_1.stp
Test-Instanzen/VD/: graph-vd1.txt  graph-vd2.txt  graph-vd3.txt  graph-vd4.txt
Unused Code/: tests.cpp  tests.h  unused_graph_aux_functions.cpp  unused_graph_aux_functions.h  unused_graph_printfunctions.cpp  unused_graph_printfunctions.h  unused_other_printfunctions.cpp  unused_other_printfunctions.h  unused_string_aux_functions.cpp  unused_string_aux_functions.h  unused_vor_diag_aux_functions.cpp  unused_vor_diag_aux_functions.h
